[package]
name = "mpeg4-audio-const"
version = "0.2.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"
repository = "https://github.com/dholroyd/mpeg4-part3-const"
categories = [ "multimedia::audio" ]
description = "Definitions of types and constants for values defined by ISO/IEC 14496 part 3 (Audio)"
license = "MIT/Apache-2.0"
keywords = [ "iso-14496-3", "mpeg4" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
